Bug 492760.  Don't try to do a best-effort scroll to never-been-laid-out frames.  r+sr=roc